# rustysearch

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/scripts/: book_vectors.json  calculate_relevance.py  get_book_data.py  preprocess_vectors.py  search_model.py
backend/src/: config.rs  main.rs  models.rs  routes.rs  schema.rs
backend/src/routes/: search.rs
backend/src/services/: db.rs  mod.rs  relevance.rs  types.rs
frontend/: Dockerfile
frontend/public/: index.html
frontend/src/: App.css  App.js
postgresdb/: Dockerfile  custom.conf  init.sql
