[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
syn = { version = "2.0.16", features = ["full"] }