[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json"] }
dotenv = "0.15.0"
syn = { version = "2.0.16", features = ["full"] }
actix-cors = "0.7.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"